Update save data detail

--- a/src/app/components/project-partlist-price-request/project-partlist-price-request.component.html
+++ b/src/app/components/project-partlist-price-request/project-partlist-price-request.component.html
@@ -1,7 +1,7 @@
-<div class="layout-wrapper d-flex" style="height: 100%">
+<div class="layout-wrapper d-flex fs-12" style="height: 100%">
   <!-- Nút mở sidebar -->
   <div
-    class="offcanvas offcanvas-left custom-offcanvas offcanvas-start"
+    class="offcanvas offcanvas-left custom-offcanvas offcanvas-start fs-12"
     tabindex="-1"
     id="offcanvasSearch"
     aria-labelledby="offcanvasSearchLabel"
@@ -104,11 +104,8 @@
         </ng-select>
       </div>
 
-      <button class="btn btn-primary w-100 mb-2" (click)="applyFilters()">
+      <button class="btn btn-primary col-12 pb-1" (click)="applyFilters()">
         Áp dụng
-      </button>
-      <button class="btn btn-outline-secondary w-100" (click)="resetFilters()">
-        Đặt lại
       </button>
     </div>
   </div>
