--- a/src/app/components/project-partlist-price-request/project-partlist-price-request.component.css
+++ b/src/app/components/project-partlist-price-request/project-partlist-price-request.component.css
@@ -12,7 +12,7 @@
   position: absolute;
   height: 100%;
   transform: translateX(-100%);
-  transition: transform 0.1s ease;
+  transition: transform 0.2s ease;
   z-index: 1;
 }
 
@@ -20,6 +20,7 @@
 .offcanvas-left.show {
   transform: translateX(0);
 }
+
 .card {
   height: 100%;
 }
@@ -40,11 +41,6 @@
   white-space: nowrap !important;
 }
 
-.btn {
-  height: 2.5vh;
-  font-size: 0.75rem;
-  border: none;
-}
 .tabulator {
   font-size: 0.75rem;
 }
@@ -55,4 +51,31 @@
 
 .fs-12 {
   font-size: 0.75rem;
+}
+
+.btn {
+  height: 2.5vh;
+  font-size: 0.75rem;
+  border: none;
+}
+
+::ng-deep ng-select.form-control .ng-clear-wrapper {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+::ng-deep ng-select.form-control .ng-clear-wrapper:hover {
+  color: #d9363e;
+}
+
+::ng-deep .ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-value {
+    margin-top: 3px;
+    margin-right: 1px;
+    font-size: .75rem;
+    background-color: #fafafa;
+    border: none;
+    border-radius: 2px;
+    height: 24px;
+    line-height: 22px;
 }
