--- a/src/app/components/VPP/OfficeSupplies/office-supplies.component.html
+++ b/src/app/components/VPP/OfficeSupplies/office-supplies.component.html
@@ -33,48 +33,6 @@
       <div class="col-12 p-0">
         <div class="card">
           <div class="card-header p-0">
-              <!-- <div class="d-flex justify-content-start">
-                  <button
-                    type="button"
-                    class="btn btn-outline-secondary p-0 ps-2 pe-2"
-                    title="Tìm kiếm"
-                    data-bs-toggle="offcanvas"
-                    data-bs-target="#searchOffcanvas"
-                  >
-                    <i class="fas fa-search"></i> Tìm kiếm
-                  </button>
-                  <input type="text"   class="p-0 ps-1 pe-1" [(ngModel)]
-                  ="searchText" (input)="onSearchChange($event)" placeholder="Tìm 
-                  kiếm...">
-                  <button
-                    type="button"
-                    class="btn btn-outline-secondary p-0 ps-2 pe-2"
-                    title="Thêm mới" (click)="openModalForNewProduct()"
-                  >
-                    <i class="fas fa-plus"></i> Thêm
-                  </button>
-                  <button
-                    type="button"
-                    class="btn btn-outline-secondary p-0 ps-2 pe-2"
-                    title="Sửa" (click)="edit()"
-                  >
-                    <i class="fas fa-pen"></i> Sửa
-                  </button>
-                  <button
-                    type="button"
-                    class="btn btn-outline-secondary p-0 ps-2 pe-2"
-                    title="Xóa" (click)="delete()"
-                  >
-                    <i class="fas fa-trash"></i> Xóa
-                  </button>
-                  <button
-                    type="button"
-                    class="btn btn-outline-secondary p-0 ps-2 pe-2"
-                    title="Xuất Excel"  (click)="exportToExcel()"
-                  >
-                    <i class="fas fa-file-excel"></i> Xuất excel
-                  </button>
-               -->
             <div class="d-flex justify-content-between">
               <div class="d-flex gap-2">
                 <button
@@ -97,6 +55,20 @@
                   title="Xóa" (click)="delete()"
                 >
                   <i class="fas fa-trash"></i> Xóa
+               
+                </button>
+                <button
+                type="button"
+                class="btn btn-outline-secondary p-0 ps-2 pe-2"
+                title="Đơn vị tính" (click)="openModalDVT()"
+              >Đơn vị tính
+              </button>
+                <button
+                  type="button"
+                  class="btn btn-outline-secondary p-0 ps-2 pe-2"
+                  title="Nhập Excel" (click)="importFromExcel()"
+                >
+                  <i class="fas fa-file-excel"></i> Nhập excel
                 </button>
                 <button
                   type="button"
@@ -121,6 +93,7 @@
     </div>
   </div>
 </div>
+
 <!-- Modal -->
 <div class="modal fade" id="detailProductModal" tabindex="-1" aria-labelledby="addProductModalLabel"
   aria-hidden="true">
@@ -238,7 +211,7 @@
           </div>
           <div class="mb-3">
             <label for="unitName" class="form-label">Tên đơn vị <sup style="color: red;">(*)</sup></label>
-            <input type="text" class="form-control" id="unitName" [(ngModel)]="newUnit.Name" name="unitName" required placeholder="Nhập tên đơn vị">
+            <input type="text" class="form-control" id="unitName" [(ngModel)]="newUnit.Name" name="unitName" required placeholder="Nhập tên đơn vị">  
             <div class="invalid-feedback">
               Vui lòng nhập tên đơn vị!
             </div>
@@ -252,3 +225,38 @@
     </div>
   </div>
 </div>
+<script>
+  document.getElementById("file-load-trigger").addEventListener("click", function(){
+    table.import("xlsx", [".xlsx", ".csv", ".ods"], "buffer");
+});
+</script>
+// <!-- modal don vi tinh -->
+<div class="modal fade" id="officeSupplyUnitModal" tabindex="-1" aria-labelledby="officeSupplyUnitModalLabel"  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addUnitModalLabel">Danh sách đơn vị tính</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form class="needs-validation" novalidate>
+          <div class="d-flex gap-2 align-items-center p-2">
+              <input type="text" class="form-control form-control-sm " placeholder="Nhập đơn vị tính">
+			  <button
+              type="button"
+              class="btn btn-outline-secondary p-0 ps-2 pe-2"
+              title="Nhập đơn vị tính" 
+            >Thêm
+            </button>
+          </div>
+          <div class="card-body p-2">
+            <div id="datatable2"></div>
+        </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button style="height: auto;" type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Đóng</button>
+        <button style="height: auto;" type="button" class="btn btn-outline-primary" (click)="addNewUnit()">Lưu</button>
+      </div>
+    </div>
+  </div> 
