--- a/src/app/components/assetsmanagement/Assets-Unit/UnitManagement.component.html
+++ b/src/app/components/assetsmanagement/Assets-Unit/UnitManagement.component.html
@@ -1,19 +1,25 @@
 <!-- UnitManagement.component.html -->
-
 <div class="d-flex align-items-center mb-3">
-  <button class="btn btn-success me-2" (click)="openUnitModal('add')">
-    Thêm đơn vị tính
+
+  <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2 fs-12" title="Thêm mới"
+    (click)="openUnitModal('add')">
+    <i class="fas fa-plus"></i> Thêm
   </button>
-  <button class="btn btn-warning" (click)="onEditClick()">
-    Sửa đơn vị tính
+  <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2 fs-12" title="Sửa" (click)="onEditClick()">
+    <i class="fas fa-pen"></i> Sửa
+  </button>
+  <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2 fs-12" title="Xóa" (click)="onDeleteClick()">
+    <i class="fas fa-trash"></i> Xóa
   </button>
 </div>
+<div class="col-12 col-sm-12">
+  <div class="border">
+    <div id="datatableunit" style="height: 25vh;"></div>
+  </div>
+</div>
 
-<div id="datatableunit"></div>
-
-<!-- Modal chung Add/Edit -->
-<div class="modal fade" id="unitModal" tabindex="-1"
-     aria-labelledby="unitModalLabel" aria-hidden="true">
+<!-- Modal chung Add/Edit Unit  -->
+<div class="modal fade" id="unitModal" tabindex="-1" aria-labelledby="unitModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
@@ -21,22 +27,15 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body">
-        <input
-          type="text"
-          class="form-control"
-          [(ngModel)]="newUnitName"
-          [placeholder]="action === 'add' ? 'Tên đơn vị mới' : 'Tên đơn vị sửa'"
-        />
+        <input type="text" class="form-control" [(ngModel)]="newUnitName"
+          [placeholder]="action === 'add' ? 'Tên đơn vị mới' : 'Tên đơn vị sửa'" />
       </div>
       <div class="modal-footer">
-        <button type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal">Hủy</button>
-        <button type="button"
-                class="btn btn-primary"
-                (click)="saveUnit()">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+        <button type="button" class="btn btn-primary" (click)="saveUnit()">
           {{ action === 'add' ? 'Thêm' : 'Lưu' }}
         </button>
+
       </div>
     </div>
   </div>
